# terrarium

./: .gitignore  CLAUDE.md  DECISIONS.md  terrarium-architecture.md
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  Dockerfile.dev-base  TERRARIUM.md  lima-terrarium.yaml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/hooks/: terrarium-proxy.sh
desktop/src-tauri/scripts/: host-open
desktop/src-tauri/src/: error.rs  host_api.rs  lib.rs  mdns.rs  project.rs  proxy.rs  terminal.rs
desktop/src-tauri/src/runtime/: lima.rs  mod.rs  types.rs
desktop/src-tauri/templates/: CLAUDE.md
desktop/src/components/: CreateProjectDialog.tsx  ProjectCard.tsx  ProjectDashboard.tsx  SessionPromptDialog.tsx  ShutdownDialog.tsx  TerminalView.tsx  VmStatusBar.tsx
desktop/src/hooks/: useProjects.ts  useVmStatus.ts
desktop/src/types/: project.ts  vm.ts
mcp-server/: build.mjs  package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts  state.ts
mcp-server/src/tools/: allocate-port.ts  env-info.ts  list-ports.ts  release-port.ts
